Fix line animation on mobile

--- a/dev/styles/base/_line-animation.scss
+++ b/dev/styles/base/_line-animation.scss
@@ -1,11 +1,12 @@
 .line-animation {
     position: relative;
+    display: inline-block;
     font-weight: inherit;
 
     &::before {
         @include pseudo;
         z-index: -1;
-        bottom: 1.6rem;
+        bottom: 8px;
         left: 0;
         width: 0;
         height: 2.1rem;
@@ -14,7 +15,7 @@
         transition: width .5s ease-in-out;
 
         @include respond('md') {
-            bottom: 1.2rem;
+            bottom: 1rem;
             height: 1.1rem;
         }
     }
